# FEM

./: CMakeLists.txt  assignment_setup.h  test.cpp
cmake/: FindLIBIGL.cmake
data/: cube86.mesh
include/: assemble_forces.h  bar_magnet.h  compute_normals.h  dH_Internal_field.h  heaviside.h  implicit_euler.h  interpolate.h  levelset.h  linearly_implicit_euler.h  newtons_method.h  poisson.h  quadrature_single_point.h
magnetic_field/magnetic_field/: CMakeLists.txt  magnetic_field  magnetic_field.cpp
shared/include/: visualization.h
shared/src/: visualization.cpp
src/: T_linear_tetrahedron.cpp  V_linear_tetrahedron.cpp  V_spring_particle_particle.cpp  assemble_forces.cpp  assemble_stiffness.cpp  bar_magnet.cpp  build_skinning_matrix.cpp  compute_normals.cpp  d2V_linear_tetrahedron_dq2.cpp  d2psi_neo_hookean_dF2.cpp  dH_Internal_field.cpp  dV_linear_tetrahedron_dq.cpp  dV_spring_particle_particle_dq.cpp  dphi_linear_tetrahedron_dX.cpp  dpsi_neo_hookean_dF.cpp  fixed_point_constraints.cpp  heaviside.cpp  interpolate.cpp  levelset.cpp  mass_matrix_linear_tetrahedron.cpp  mass_matrix_mesh.cpp  phi_linear_tetrahedron.cpp  poisson.cpp  psi_neo_hookean.cpp
test_build/: CMakeCache.txt  Makefile  cmake_install.cmake
test_build/glad/: Makefile
test_build/glfw/: Makefile  cmake_install.cmake
test_build/glfw/src/: Makefile  cmake_install.cmake
test_build/imgui/: Makefile  cmake_install.cmake
